--- a/3-2. Props.md
+++ b/3-2. Props.md
@@ -10,7 +10,7 @@ categories:
 
 지금까지 `<Header />`두 번 모두 동일한 콘텐츠를 표시합니다.
 
-```
+```html
 function Header() {
   return <h1>Develop. Preview. Ship. 🚀</h1>;
 }
@@ -44,7 +44,7 @@ JavaScript 함수와 마찬가지로 사용자 지정 인수를 허용하는 구
 
 당신의 `HomePage`구성 요소, 사용자 정의를 전달할 수 있습니다 `title`에 props `Header`HTML 속성을 전달하는 것과 같은 구성요소:
 
-```
+```html
 // function Header() {
 //   return <h1>Develop. Preview. Ship. 🚀</h1>
 // }
@@ -65,7 +65,7 @@ function HomePage() {
 
 그리고 `Header`, 자식 구성 요소는 해당 props을 첫 번째 **함수 매개 변수** 로 수락할 수 있습니다 .
 
-```
+```html
 function Header(props) {
 //   return <h1>Develop. Preview. Ship. 🚀</h1>
 // }
@@ -86,7 +86,7 @@ function Header(props) {
 
 만약 너라면 `console.log()` 임을 알 수 있습니다 . **개체** props을 보면 제목 속성이 있는
 
-```
+```html
 function Header(props) {
     console.log(props) // { title: "React 💙" }
 //   return <h1>React 💙</h1>
@@ -106,7 +106,7 @@ function Header(props) {
 
 props는 객체이므로 **객체 구조 분해를** 사용하여 함수 매개변수 내에서 props 값의 이름을 명시적으로 지정할 수 있습니다.
 
-```
+```html
 function Header({ title }) {
     console.log(title) // "React 💙"
 //  return <h1>React 💙</h1>
@@ -126,7 +126,7 @@ function Header({ title }) {
 
 그런 다음 `<h1>`제목 변수로 태그를 지정합니다.
 
-```
+```html
 function Header({ title }) {
   console.log(title);
   return <h1>title</h1>;
@@ -142,7 +142,7 @@ function Header({ title }) {
 
 정의한 변수를 사용하려면 **중괄호를 사용할 수 있습니다.** `{}`, JSX 마크업 내에서 직접 일반 JavaScript를 작성할 수 있는 특수 JSX 구문입니다.
 
-```
+```html
 // function Header({title}) {
 //  console.log(title)
 return <h1>{title}</h1>;
@@ -156,7 +156,7 @@ return <h1>{title}</h1>;
 
 1. 객체 **속성입니다 .** 점 표기법을 사용하는
 
-```
+```html
 function Header(props) {
   return <h1>{props.title}</h1>;
 }
@@ -167,7 +167,7 @@ function Header(props) {
 
 1. 템플릿 **리터럴** :
 
-```
+```html
 function Header({ title }) {
   return <h1>{`Cool ${title}`}</h1>;
 }
@@ -178,7 +178,7 @@ function Header({ title }) {
 
 1. 입니다 **함수의 반환 값** .
 
-```
+```html
 function createTitle(title) {
   if (title) {
     return title;
