--- a/3-1. React 핵심 개념.md
+++ b/3-1. React 핵심 개념.md
@@ -34,7 +34,7 @@ React 컴포넌트의 좋은 점은 바로 JavaScript라는 것입니다. JavaSc
 
 React에서 컴포넌트는 **함수입니다.** 너의 안에 `script`태그, 라는 함수를 작성하십시오. `header`:
 
-```
+```html
 <script type="text/jsx">
   const app = document.getElementById("app")
 
@@ -52,7 +52,7 @@ React에서 컴포넌트는 **함수입니다.** 너의 안에 `script`태그
 
 함수입니다 **컴포넌트는 UI 요소를 반환하는** . 함수의 return 문 안에 JSX를 작성할 수 있습니다.
 
-```
+```html
 <script type="text/jsx">
   const app = document.getElementById("app")
 
@@ -70,7 +70,7 @@ React에서 컴포넌트는 **함수입니다.** 너의 안에 `script`태그
 
 이 컴포넌트를 DOM에 렌더링하려면 이 컴포넌트를 `ReactDOM.render()`방법:
 
-```
+```html
 <script type="text/jsx">
 
   const app = document.getElementById("app")
@@ -92,7 +92,7 @@ React에서 컴포넌트는 **함수입니다.** 너의 안에 `script`태그
 
 첫째, React 컴포넌트는 일반 HTML 및 JavaScript와 구별하기 위해 대문자로 표시되어야 합니다.
 
-```
+```html
 function Header(
 ) {
   return <h1>Develop. Preview. Ship. 🚀</h1>;
@@ -107,7 +107,7 @@ ReactDOM.render(Header, app);
 
 둘째, 꺾쇠 괄호와 함께 일반 HTML 태그를 사용하는 것과 동일한 방식으로 React 컴포넌트를 사용합니다. `<>`.
 
-```
+```html
 function Header(
 ) {
   return <h1>Develop. Preview. Ship. 🚀</h1>;
@@ -125,7 +125,7 @@ ReactDOM.render(<Header />, app);
 
 귀하의 예에서라는 새 컴포넌트를 만듭니다. `HomePage`:
 
-```
+```html
 function Header(
 ) {
   return <h1>Develop. Preview. Ship. 🚀</h1>;
@@ -143,7 +143,7 @@ ReactDOM.render(<Header />, app);
 
 그런 다음 `<Header>`새로운 내부 컴포넌트 `<HomePage>`요소:
 
-```
+```html
 function Header(
 ) {
   return <h1>Develop. Preview. Ship. 🚀</h1>;
